GL/src/test/deca/codegen/invalid/overflow_float_SUB.ass
; start main program
	TSTO #3
	BOV stack_overflow_error
	ADDSP #3
; Construction de la VTable de de Object
	LOAD #null, R0	;     // On garde Dans R0 l'addr de la classe Object pour eviter de le loader a chaque fois !! 
	STORE R0, 1(GB)
	LOAD code.Object.equals, R1	;     // On garde Dans R1 le label 'code.Object.equals' pour la meme raison 
	STORE R1, 2(GB)
; Variable Declarations : 
	LOAD #0x1.fffffep127, R0
	STORE R0, 3(GB)
; Beginning of main instructions:
	LOAD 3(GB), R2
	LOAD #2, R3
	FLOAT R3, R3
	BOV overflow_error
	LOAD 3(GB), R4
	MUL R4, R3
	BOV overflow_error
	SUB R3, R2
	BOV overflow_error
	LOAD R2, R1
	WFLOAT
	WNL
	HALT
; end main program
code.Object.equals:
	LOAD -2(LB), R0
	CMP -3(LB), R0
	SEQ R1
	RTS
stack_overflow_error:
	WSTR "Error: Stack Overflow"
	WNL
	ERROR
overflow_error:
	WSTR "Error: Overflow sur Float"
	WNL
	ERROR
